--- a/confessionlist/client/src/index.html
+++ b/confessionlist/client/src/index.html
@@ -6,6 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/cyborg/bootstrap.min.css">
+  
+  <div class="w3-container">
+    <p>This is coming from index.html </p>
+  </div>
+
 </head>
 <body>
   <app-root></app-root>
