Implemented successful get method of a random confession from mongodb

--- a/confessionlist/client/src/index.html
+++ b/confessionlist/client/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/cyborg/bootstrap.min.css">
   
   <div class="w3-container">
-    <p>This is coming from index.html </p>
+    <p>Welcome to trying to figure out how to connect mongodb database to the confession service </p>
   </div>
 
 </head>
